appId: de.idrinth.habitevaluator.android
name: "First start dialog and home page"
---
- launchApp:
    clearState: true
- assertVisible: "Welcome to Habit Evaluator"
- tapOn: "I understand"
- extendedWaitUntil:
    visible:
        text: "Home"
    timeout: 5000
- assertVisible: "Storage: Local"
